{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 23,
  "lineage": "301d535d-7344-a18c-8cd8-258d3d7b6ac3",
  "resources": [
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_elb",
      "name": "swarm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339048869165:loadbalancer/tads-production-swarm",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tads-production-swarm-1938132185.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tads-production-swarm",
            "idle_timeout": 60,
            "instances": [
              "i-04f1dcc159a901d86",
              "i-0689e9b533c6d7638",
              "i-0ddff477e48a20663"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "tcp",
                "lb_port": 443,
                "lb_protocol": "tcp"
              },
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "tads-production-swarm",
            "security_groups": [
              "sg-065387a733a69e840"
            ],
            "source_security_group": "339048869165/tads-production-swarm-elb",
            "source_security_group_id": "sg-065387a733a69e840",
            "subnets": [
              "subnet-04aafdc550780fb76",
              "subnet-075e4ddb485a2d36c",
              "subnet-08efc685aa6c500d6"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.swarm_elb",
            "aws_subnet.swarm_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swarm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-019a21cea20ea76dc",
            "owner_id": "339048869165",
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019a21cea20ea76dc",
            "id": "r-rtb-05e3a5734c481ec621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e3a5734c481ec62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.swarm",
            "aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:security-group/sg-065387a733a69e840",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065387a733a69e840",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tads-production-swarm-elb",
            "name_prefix": null,
            "owner_id": "339048869165",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_manager_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:security-group/sg-045b3ca72dddc8971",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-045b3ca72dddc8971",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065387a733a69e840"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065387a733a69e840"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Docker Swarm management between managers",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d11286f24339bbfa"
                ],
                "self": false,
                "to_port": 2377
              }
            ],
            "name": "tads-production-swarm-manager-node",
            "name_prefix": null,
            "owner_id": "339048869165",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_security_group.swarm_elb",
            "aws_security_group.swarm_node",
            "aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:security-group/sg-0d11286f24339bbfa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d11286f24339bbfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Docker container network discovery",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "Docker container network discovery",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "Docker overlay network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 4789
              }
            ],
            "name": "tads-production-swarm-node",
            "name_prefix": null,
            "owner_id": "339048869165",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swarm_nodes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:subnet/subnet-08efc685aa6c500d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.0.0/20",
            "id": "subnet-08efc685aa6c500d6",
            "map_public_ip_on_launch": true,
            "owner_id": "339048869165",
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_vpc.swarm",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:subnet/subnet-04aafdc550780fb76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.16.0/20",
            "id": "subnet-04aafdc550780fb76",
            "map_public_ip_on_launch": true,
            "owner_id": "339048869165",
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_vpc.swarm",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:subnet/subnet-075e4ddb485a2d36c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.21.32.0/20",
            "id": "subnet-075e4ddb485a2d36c",
            "map_public_ip_on_launch": true,
            "owner_id": "339048869165",
            "vpc_id": "vpc-05ba356a59af331d0"
          },
          "depends_on": [
            "aws_vpc.swarm",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tads",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swarm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339048869165:vpc/vpc-05ba356a59af331d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-0e65696cdcba113e0",
            "default_route_table_id": "rtb-05e3a5734c481ec62",
            "default_security_group_id": "sg-0339dd933a29b5d06",
            "dhcp_options_id": "dopt-352fc24f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05ba356a59af331d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e3a5734c481ec62",
            "owner_id": "339048869165",
            "tags": {
              "Name": "tads-production-swarm"
            }
          }
        }
      ]
    }
  ]
}